plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sparta'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.23.4'
    implementation 'org.redisson:redisson:3.23.4'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    //querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // mailSender
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // RabbitMQ TODO : 사용시 풀 것
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // cache
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // ElasticSearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.13'

    // Spring Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // spatial
    implementation 'org.hibernate:hibernate-spatial:6.5.2.Final'
}

tasks.named('test') {
    useJUnitPlatform()
}
